Added more samples